# scrapie-core

./: .dockerignore  .gitignore  README.md  alembic.ini  development.Dockerfile  docker-compose.yml  main.py  production.Dockerfile  pyproject.toml  requirements.txt  startApp.py
.circleci/: config.yml
alembic/: env.py
alembic/versions/: 0b66bc6e67d3_create_users_table.py  3843213424b8_create_projects_table.py  6c812241a1c5_create_api_quota_table.py
constants/: messages.py
database/: connect.py  models.py  utils.py
models/: website.py
schema/: apiQuota.py  project.py  user.py  website.py
scripts/: docker-clear-all.sh  start-local-postgresql.sh  stop-local-postgresql.sh  test-app.sh
src/: app.py  main.py
src/routes/: api_key.py  auth.py  projects.py  scrape.py  users.py
src/util/: api_key_util.py  api_secrets_util.py  helper_fns.py
tests/: test_project_flow.py  test_user_flow.py  test_user_routes.py
